--- a/css/style.css
+++ b/css/style.css
@@ -51,4 +51,17 @@ body{
     text-decoration: none;
 }
 
+/* footer */
+
+footer {
+    display: grid;
+    place-content: center;
+    background-color: #212323;
+    text-align: center;
+    position: absolute;
+    color: aliceblue;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+  }
 
