--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ header{
 .header-signature h2{
     margin: 0;
     color: white;
+    margin-left: 50px;
 }
 .header-login a{
     margin: 0 10px;
